--- a/shop.co-frontend/src/styles/tailwind.css
+++ b/shop.co-frontend/src/styles/tailwind.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: 'Cizel';
+    src: url('../assets/fonts/cinzel/Cinzel-Regular.ttf');
+}
+h1, h2, h3, h4, h5, h6{
+    font-family: 'Cizel';
+}
+p{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 14px;
+}
