--- a/shop.co-frontend/src/styles/tailwind.css
+++ b/shop.co-frontend/src/styles/tailwind.css
@@ -13,3 +13,14 @@ p{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 14px;
 }
+h1{
+    font-size: 54px;
+}
+h2{
+    font-size: 34px;
+    font-weight: 600;
+}
+h3{
+    font-size: 24px;
+    font-weight: 600;
+}
